[gd_scene load_steps=10 format=2]

[ext_resource path="res://media/image/rect.png" type="Texture" id=1]
[ext_resource path="res://src/actor/Box.gd" type="Script" id=2]
[ext_resource path="res://media/audio/sfx/crate_move.wav" type="AudioStream" id=3]
[ext_resource path="res://media/image/arrow.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 50 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50, 50 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 50, 60 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 60, 50 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 30, 30 )

[node name="Box" type="KinematicBody2D" groups=[
"box",
]]
position = Vector2( 50, 50 )
z_index = 30
z_as_relative = false
collision_layer = 5
script = ExtResource( 2 )

[node name="Sprites" type="Node2D" parent="."]

[node name="Box" type="Sprite" parent="Sprites"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="Arrow" type="Sprite" parent="Sprites/Box"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AudioPush" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 0

[node name="CollisionBody" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="CollisionSprite" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="StandingArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StandingArea"]
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StandingArea"]
shape = SubResource( 4 )

[node name="PushAreas" type="Node2D" parent="."]
visible = false

[node name="0" type="Area2D" parent="PushAreas"]
position = Vector2( 0, 100 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PushAreas/0"]
shape = SubResource( 5 )

[node name="1" type="Area2D" parent="PushAreas"]
position = Vector2( -100, 0 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PushAreas/1"]
shape = SubResource( 5 )

[node name="2" type="Area2D" parent="PushAreas"]
position = Vector2( 0, -100 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PushAreas/2"]
shape = SubResource( 5 )

[node name="3" type="Area2D" parent="PushAreas"]
position = Vector2( 100, 0 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PushAreas/3"]
shape = SubResource( 5 )
